crates/bc-cli/tests/cli/snapshots/cli__meta__renaming_a_key_to_its_own_name_moves_nothing.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Key 'invoice' is already named that
----- stderr -----
