crates/bc-cli/tests/cli/snapshots/cli__meta__renaming_onto_a_registered_key_fails.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid input: cannot rename metadata key 'invoice' to 'note': 'note' is already registered
