crates/bc-cli/tests/cli/snapshots/cli__meta__retype_rejects_a_type_it_does_not_know.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: invalid value 'colour' for '<TYPE>'
  [possible values: text, number, boolean, date, timestamp, amount, account]

For more information, try '--help'.
