crates/bc-cli/tests/cli/snapshots/cli__meta__retype_reports_the_type_it_replaced.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Retyped 'invoice': number -> text
----- stderr -----
