crates/bc-cli/tests/cli/snapshots/cli__meta__retyping_a_key_to_what_it_already_holds_says_so.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Key 'invoice' is already number
----- stderr -----
